# cs5100-project

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: cs5100-issue-template.md
.github/workflows/: ci.yaml
src/: __init__.py  env.py
src/agent/: agent.py  cache.py
src/app/: __init__.py  langchain_adapter.py
src/cmd/: import_paprika.py  paprika_etl.py  paprika_repackage.py  start_app.py
src/paprika/: chunker.py  cleanse_and_enrich.py  data_exploration_and_cleaning.ipynb  parser.py  profile_data.ipynb  transform.py  vectorstore.py
src/tools/: api.py  api_cache.py  mealdb_wrapper.py  vector_store.py
tests/: conftest.py
tests/agent/: test_mealdb.py  test_tools.py  test_vector_store.py
tests/app/: test_app.py
tests/cmd/: test_paprika_etl_e2e.py  test_paprika_repackage.py  test_paprika_repackage_e2e.py  test_start_app.py
tests/fixtures/: paprika_etl.py
tests/fixtures/paprika/: README.md  export.json  export.paprikarecipes
