[project]
name = "cs5100-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain>=1.0.3",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
    "langchain-huggingface>=1.0.0",
    "langchain-chroma>=1.0.0",
    "sentence-transformers>=5.1.2",
    "pytest>=8.4.2",
    "pytest-timeout>=2.4.0",
    "langchain-google-genai>=3.0.0",
    "gradio>=5.23.1",
    "pytest-asyncio>=1.2.0",
    "types-requests>=2.31.0"
]

#####
##### GPU ACCELERATION SECTION - START
##### > Added GPU and CPU versions of torch 
##### > In theory, UV should automatically select 
##### > correct GPU 
##### See https://docs.astral.sh/uv/guides/integration/pytorch/#installing-pytorch
##### for the original code this was adapted from
#####
[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
]
cu128 = [
  "torch>=2.7.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


#####
##### GPU ACCELERATION SECTION - END
#####

[tool.mypy]
strict = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "mypy-untyped_package.*"
follow_untyped_imports = true


[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py313"
[tool.ruff.lint.pydocstyle]
convention = "google" 

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff.lint]
select = [
    "D", 
    "E", 
    "F", 
    "ANN", 
    "B", 
    "A", 
    "LOG", 
    "R", 
    "EM",
    "R",
    "Q0",
    "I",
    "N",
    "TRY",
    "TID",
    "PLR"
]
ignore = ["D104", "D100", "D205", "TRY002"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
pythonpath = ["."]
timeout = 30
#log_cli = true
log_level = "DEBUG"
